# speckit-ralph

./: .gitignore  LICENSE  README.md  pyproject.toml
src/speckit_ralph/: __init__.py  cli.py
src/speckit_ralph/scripts/: RALPH_AUDIT.md  README.md  afk-ralph-claude.sh  afk-ralph-codex.sh  agent-commands.sh  build-prompt.sh  prompt-template.md  ralph-env.sh  ralph-loop.sh  ralph-once-claude.sh  ralph-once-codex.sh  ralph-once.sh
