[project]
name = "speckit-ralph"
version = "0.1.0"
description = "Ralph Wiggum Loop - Iterative AI coding CLI for Claude Code and Codex"
readme = "README.md"
authors = [
    { name = "merllinsbeard", email = "144795773+merllinsbeard@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
ralph = "speckit_ralph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speckit_ralph"]

[tool.hatch.build.targets.wheel.shared-data]
"src/speckit_ralph/scripts" = "share/speckit-ralph/scripts"
